Add requests for buffs
