# src/api_gen/models/CreateBuffDto.ts
@@ -1,0 +1,57 @@
+/**
+ * MOEPP CITES API
+ * MOEPP CITES API docs
+ *
+ * OpenAPI spec version: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+import { HttpFile } from '../http/http';
+
+export class CreateBuffDto {
+    'guildUid': string;
+    'type': CreateBuffDtoTypeEnum;
+    'member': string;
+
+    static readonly discriminator: string | undefined = undefined;
+
+    static readonly mapping: {[index: string]: string} | undefined = undefined;
+
+    static readonly attributeTypeMap: Array<{name: string, baseName: string, type: string, format: string}> = [
+        {
+            "name": "guildUid",
+            "baseName": "guildUid",
+            "type": "string",
+            "format": ""
+        },
+        {
+            "name": "type",
+            "baseName": "type",
+            "type": "CreateBuffDtoTypeEnum",
+            "format": ""
+        },
+        {
+            "name": "member",
+            "baseName": "member",
+            "type": "string",
+            "format": ""
+        }    ];
+
+    static getAttributeTypeMap() {
+        return CreateBuffDto.attributeTypeMap;
+    }
+
+    public constructor() {
+    }
+}
+
+export enum CreateBuffDtoTypeEnum {
+    Construction = 'construction',
+    Research = 'research',
+    Training = 'training'
+}
+
