# src/api_gen/models/all.ts
@@ -5,7 +5,9 @@ export * from '../models/AuthForgotPasswordDto'
 export * from '../models/AuthRegisterLoginDto'
 export * from '../models/AuthResetPasswordDto'
 export * from '../models/AuthUpdateDto'
+export * from '../models/Buff'
 export * from '../models/Channel'
+export * from '../models/CreateBuffDto'
 export * from '../models/CreateChannelDto'
 export * from '../models/CreateGuildDto'
 export * from '../models/CreateIndividualUserDto'
